gccida/g2/output_function_exception_table
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/output_function_exception_table/src/except.c:4337:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v22; // rdi 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/output_function_exception_table/src/except.c:4464:20: error: expected expression
v22 = ( tree_node *)*( &global_trees + 11); 
                   ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/output_function_exception_table/src/except.c:4464:9: error: use of undeclared identifier 'tree_node'
v22 = ( tree_node *)*( &global_trees + 11); 
        ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/output_function_exception_table/src/except.c:4467:22: error: expected expression
v22 = *( tree_node **)( *( _QWORD *)htab_find_slot_with_hash( 
                     ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/output_function_exception_table/src/except.c:4467:10: error: use of undeclared identifier 'tree_node'
v22 = *( tree_node **)( *( _QWORD *)htab_find_slot_with_hash( 
         ^
5 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/output_function_exception_table/src/obj/except.o] Error 1
